# Hypercompute

./: Cargo.toml  README.md
hypercompute-cli/: Cargo.toml
hypercompute-cli/src/: executor.rs  main.rs  submitter.rs  worker.rs
hypercompute-proto/: Cargo.toml
hypercompute-proto/src/: lib.rs
hypercompute-server/: Cargo.toml
hypercompute-server/src/: main.rs  router.rs  scheduler.rs  state.rs  ws_handler.rs
