[package]
name = "hypercompute-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hc"
path = "src/main.rs"

[dependencies]
hypercompute-proto = { path = "../hypercompute-proto" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.30"
hostname = "0.3"
ctrlc = "3"