[package]
name = "hypercompute-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hc-server"
path = "src/main.rs"

[dependencies]
hypercompute-proto = { path = "../hypercompute-proto" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "json"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
dashmap = "5"
tokio-tungstenite = "0.21"
futures = "0.3"
anyhow = "1"
thiserror = "1"
